# spark-wallet-startos

./: .gitignore  Dockerfile  Makefile  README.md  config_spec.yaml  docker_entrypoint.sh  health-check.sh  instructions.md  manifest.yaml  package-lock.json  package.json
assets/compat/: config_spec.yaml
configurator/: .gitignore  Cargo.toml
configurator/src/: config.template  main.rs
doc/: instructions.md
docs/: instructions.md
scripts/: deps.ts  embassy.js  embassy.ts
scripts/procedures/: migrations.ts
scripts/services/: getConfig.ts  migrations.ts
