[package]
name = "configurator"
version = "0.1.0"
authors = ["Aiden McClelland <me@drbonez.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
base64 = "0.13.0"
hmac = "0.12.1"
regex = "1.4.2"
sha2 = "0.10.2"
serde = { version = "1.0.117", features = ["derive"] }
serde_yaml = "0.8.14"
